<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headLinear"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint_new"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/tel_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_verify_hint"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />

            <TextView
                android:id="@+id/code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/btn_blue"
                android:gravity="center"
                android:text="@string/sign_code"
                android:textColor="@color/white"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/new_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwdconfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/new_confirm_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            android:drawableLeft="@drawable/sign_padding"
            android:drawablePadding="@dimen/page_drawable"
            android:gravity="center_vertical"
            android:text="@string/sign_hint"
            android:textColor="@color/red"
            android:textSize="@dimen/font_hint"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/page_line_btn"
        android:background="@drawable/btn_blue"
        android:gravity="center"
        android:text="确定"
        android:textColor="@color/white"
        android:textSize="@dimen/font_app" />

</RelativeLayout>