<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_left_new"
        android:paddingRight="@dimen/page_right_new"
        android:paddingTop="@dimen/page_top" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_tel_hint"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/sign_pwd_hint"
                android:inputType="textPassword"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/verify1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/verification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:drawableLeft="@drawable/sign_verify"
                android:drawablePadding="@dimen/page_drawable"
                android:gravity="center_vertical"
                android:hint="@string/sign_verify_hint"
                android:paddingBottom="@dimen/text_line"
                android:textColor="@color/font_gray"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_app" />

            <ImageView
                android:id="@+id/verifyimage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/verify2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@drawable/sign_padding" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/page_drawable"
                android:background="@color/app_line" />
        </LinearLayout>

        <TextView
            android:id="@+id/losepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/page_line"
            
            android:drawableLeft="@drawable/sign_padding"
            android:drawablePadding="@dimen/page_drawable"
            android:gravity="right"
            android:text="@string/sign_lose"
            android:textColor="@color/blue_v2"
            android:textSize="@dimen/font_hint" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_line"
            
            android:drawableLeft="@drawable/sign_padding"
            android:drawablePadding="@dimen/page_drawable"
            android:gravity="center_vertical"
            android:text="@string/sign_hint"
            android:textColor="@color/orange"
            android:textSize="@dimen/font_hint"
            android:visibility="gone" />

        <TextView
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/page_line_btn"
            android:layout_marginLeft = "20dp"
            android:layout_marginRight = "20dp"
            
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="@dimen/font_app" />

    </LinearLayout>

</RelativeLayout>