<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- 显示头部标题 -->

    <LinearLayout
        android:id="@+id/headLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/headLinear"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_left"
        android:paddingRight="@dimen/page_right"
        android:paddingTop="@dimen/page_top" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwd_old"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_old"
                android:inputType="textPassword"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/pwd_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_new"
                android:inputType="textPassword"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <EditText
               android:id="@+id/pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/pwd_confirm"
                android:inputType="textPassword"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/font_gray_man"
                android:textColorHint="@color/font_hint"
                android:textSize="@dimen/font_hint_v2" />
        </RelativeLayout>


        <TextView
            android:id="@+id/hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_line"
            
            android:drawableLeft="@drawable/sign_padding"
            android:drawablePadding="@dimen/page_drawable"
            android:gravity="center_vertical"
            android:textColor="@color/app_orange"
            android:textSize="@dimen/font_hint"
            android:visibility="gone" />
        

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft = "20dp"
            android:layout_marginRight = "20dp"
            android:layout_marginTop="@dimen/page_line_btn"
            
            android:background="@drawable/btn_blue"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/font_app" />
    </LinearLayout>

</RelativeLayout>